--- a/homepage.html
+++ b/homepage.html
@@ -50,7 +50,7 @@
         <!-- About Me -->
         <div id="about" class="about-container">
             <div class="picture">
-                <img src="images/me.jpeg" />
+                <img src="images/profilepic.jpg" />
             </div>
             <h2>About Me</h2>
             <p class="paragraph">As a new coder ready to explore the land of code, I’m looking forward to new opportunities. Technology has always been a passion of mine, and diving into the meat and bones of it has been just what I needed. Coming out of the service industry, I learned a lot of service and transferrable skills. Skills such as meeting tight deadlines, working in teams, and ensuring guests received their product or service. I enjoyed serving and plan on incorporating these skills into the world of technology.</p>
@@ -103,7 +103,7 @@
         <div id="projects" class="proj-container">
             <h2>Projects</h2>
             <div class="project">
-                <div class="card-container">
+                <div class="card-container whether">
                     <div id="whetherfit" class="card" style="width: 40rem;">
                         <img src="images/whetherfit.png" class="card-img-top" alt="WhetherFit Thumbnail">
                         <div class="card-body">
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-container">
+                <div class="card-container vine">
                     <div id="vinebook" class="card" style="width: 40rem;">
                         <img src="images/vineBookThumbnail.png" class="card-img-top" alt="Vinebook Thumbnail">
                         <div class="card-body">
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="card-container">
-                    <div id="kuzushi" class="card" style="width: 40rem;">
+                    <div id="kuzushi" class="card crm" style="width: 40rem;">
                         <img src="images/crmSystem.png" class="card-img-top" alt="Kuzushi Solutions Thumbnail">
                         <div class="card-body">
                         <h5 class="card-title">Kuzushi Solutions</h5>
