Updated project cards and font sizing for header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Arvo:ital@1&family=Montserrat+Subrayada&family=Sahitya&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
-        <link rel="stylesheet" href="homepage.css">
+        <link rel="stylesheet" href="index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -104,38 +104,38 @@
             <h2>Projects</h2>
             <div class="project">
                 <div class="card-container whether">
-                    <div id="whetherfit" class="card" style="width: 40rem;">
+                    <div id="whetherfit" class="card  bg-secondary" style="width: 40rem;">
                         <img src="images/whetherfit.png" class="card-img-top" alt="WhetherFit Thumbnail">
                         <div class="card-body">
                         <h5 class="card-title">WhetherFit</h5>
                         <p class="card-text">WhetherFit is a front-end web application that gives the user a list of clothes to wear based on the weather in their specified location. It allows for users to prepare for the weather that awaits them.</p>
                         <p class="card-text">Technologies Used: HTML, CSS, & JavaScript</p>
                         <p>Date: September 2019</p>
-                        <a href="https://whetherfit.netlify.app/" class="btn btn-dark">Visit Website</a>
+                        <a href="https://whetherfit.netlify.app/" class="btn btn-danger">Visit Website</a>
                         </div>
                     </div>
                 </div>
                 <div class="card-container vine">
-                    <div id="vinebook" class="card" style="width: 40rem;">
+                    <div id="vinebook" class="card bg-secondary" style="width: 40rem;">
                         <img src="images/vineBookThumbnail.png" class="card-img-top" alt="Vinebook Thumbnail">
                         <div class="card-body">
                         <h5 class="card-title">VineBook</h5>
                         <p class="card-text">VineBook is a new web-app for restaurants and wine distributors to better display their wine inventory. This is used to help lower the amount of overstocking wine in restaurants.</p>
                         <p class="card-text">Technologies Used: HTML, CSS, & JavaScript</p>
                         <p>Date: October 2019</p>
-                        <a href="#" class="btn btn-dark">Visit Website</a>
+                        <a href="#" class="btn btn-danger">Visit Website</a>
                         </div>
                     </div>
                 </div>
-                <div class="card-container">
-                    <div id="kuzushi" class="card crm" style="width: 40rem;">
+                <div class="card-container crm">
+                    <div id="kuzushi" class="card bg-secondary" style="width: 40rem;">
                         <img src="images/crmSystem.png" class="card-img-top" alt="Kuzushi Solutions Thumbnail">
                         <div class="card-body">
                         <h5 class="card-title">Kuzushi Solutions</h5>
                         <p class="card-text">Kuzushi Solutions is a basic CRM system for small, boutique gyms. This is a template application that small companies could use to manage gym information such as merchandise inventory, member information & transaction history.</p>
                         <p class="card-text">Technologies Used: React, Node.js, Firebase, & PostgreSQL</p>
                         <p>Date: December 2019</p>
-                        <a href="#" class="btn btn-dark">Visit Website</a>
+                        <a href="#" class="btn btn-danger">Visit Website</a>
                         </div>
                     </div>
                 </div>
