--- a/index.html
+++ b/index.html
@@ -4,47 +4,31 @@
         <title>Felipe Dunbar</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Arvo:ital@1&family=Montserrat+Subrayada&family=Sahitya&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/konpa/devicon@master/devicon.min.css">
         <link rel="stylesheet" href="index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <!-- Navbar -->
-        <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Portfolio</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse titles" id="navbarNavDropdown">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#about">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#skills">Skills</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Projects
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#whetherfit">WhetherFit</a>
-                    <a class="dropdown-item" href="#vinebook">VineBook</a>
-                    <a class="dropdown-item" href="#kuzushi">Kuzushi Solutions</a>
-                  </div>
-                </li>
-              </ul>
+        <div class="sidenav">
+            <div class="sidenav-title">Felipe Dunbar Portfolio</div>
+            <div class="sidenav-pages">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#skills">Skills</a>
+                <a href="#projects">Projects</a>
             </div>
-          </nav>
+        </div>
 
-        <!-- Intro -->
+        <!-- Heading -->
         <div id="home" class="intro-container">
-            <h1 class="intro">Felipe Dunbar</h1>
-            <h5 class="intro">Software Developer & Designer</h5>
-            <h4 class="intro">Welcome to my Portfolio</h4>
+            <img class="computer" src="images/colorsDesign.png" alt="computer background" />
+            <h1 class="title-container">Editor | Developer | Designer | Creator</h1>
+        </div>
+
+        <!-- Intro  -->
+        <div class="title-container">
         </div>
 
         <!-- About Me -->
@@ -111,7 +95,7 @@
                         <p class="card-text">WhetherFit is a front-end web application that gives the user a list of clothes to wear based on the weather in their specified location. It allows for users to prepare for the weather that awaits them.</p>
                         <p class="card-text">Technologies Used: HTML, CSS, & JavaScript</p>
                         <p>Date: September 2019</p>
-                        <a href="https://whetherfit.netlify.app/" class="btn btn-danger">Visit Website</a>
+                        <a href="https://whetherfit.netlify.app/" class="btn">Visit Website</a>
                         </div>
                     </div>
                 </div>
@@ -123,7 +107,7 @@
                         <p class="card-text">VineBook is a new web-app for restaurants and wine distributors to better display their wine inventory. This is used to help lower the amount of overstocking wine in restaurants.</p>
                         <p class="card-text">Technologies Used: HTML, CSS, & JavaScript</p>
                         <p>Date: October 2019</p>
-                        <a href="#" class="btn btn-danger">Visit Website</a>
+                        <a href="#" class="btn">Visit Website</a>
                         </div>
                     </div>
                 </div>
@@ -135,7 +119,7 @@
                         <p class="card-text">Kuzushi Solutions is a basic CRM system for small, boutique gyms. This is a template application that small companies could use to manage gym information such as merchandise inventory, member information & transaction history.</p>
                         <p class="card-text">Technologies Used: React, Node.js, Firebase, & PostgreSQL</p>
                         <p>Date: December 2019</p>
-                        <a href="#" class="btn btn-danger">Visit Website</a>
+                        <a href="#" class="btn">Visit Website</a>
                         </div>
                     </div>
                 </div>
