Added new project

--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-container vine">
-                    <div id="vinebook" class="card bg-secondary" style="width: 40rem;">
-                        <img src="images/vineBookThumbnail.png" class="card-img-top" alt="Vinebook Thumbnail">
+                <div class="card-container instagram">
+                    <div id="instagram" class="card bg-secondary" style="width: 40rem;">
+                        <img src="images/instagramClone.png" class="card-img-top" alt="Instagram Clone Thumbnail">
                         <div class="card-body">
-                        <h5 class="card-title">VineBook</h5>
-                        <p class="card-text">VineBook is a new web-app for restaurants and wine distributors to better display their wine inventory. This is used to help lower the amount of overstocking wine in restaurants.</p>
-                        <p class="card-text">Technologies Used: HTML, CSS, & JavaScript</p>
-                        <p>Date: October 2019</p>
-                        <a href="#" class="btn">Visit Website</a>
+                        <h5 class="card-title">Instagram Clone</h5>
+                        <p class="card-text">This application is simply a clone of Instagram. It allows for different users to log in and create their own personal posts. Other users keep up with the what other users are posting and comment on these posts.</p>
+                        <p class="card-text">Technologies Used: React & Firebase</p>
+                        <p>Date: September 2020</p>
+                        <a href="https://instagram-clone-a3525.web.app/" class="btn">Visit Website</a>
                         </div>
                     </div>
                 </div>
