--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-container crm">
-                    <div id="kuzushi" class="card bg-secondary" style="width: 40rem;">
-                        <img src="images/crmSystem.png" class="card-img-top" alt="Kuzushi Solutions Thumbnail">
+                <div class="card-container spotify">
+                    <div id="spotify" class="card bg-secondary" style="width: 40rem;">
+                        <img src="images/spotify-clone.jpg" class="card-img-top" alt="Spotify Clone Thumbnail">
                         <div class="card-body">
-                        <h5 class="card-title">Kuzushi Solutions</h5>
-                        <p class="card-text">Kuzushi Solutions is a basic CRM system for small, boutique gyms. This is a template application that small companies could use to manage gym information such as merchandise inventory, member information & transaction history.</p>
-                        <p class="card-text">Technologies Used: React, Node.js, Firebase, & PostgreSQL</p>
-                        <p>Date: December 2019</p>
-                        <a href="#" class="btn">Visit Website</a>
+                        <h5 class="card-title">Spotify Clone</h5>
+                        <p class="card-text">This is a clone of Spotify made with React and firebase. This application has the same look and feel of the real Spotify. It allows for specific user access, pulling up your personal playlists.</p>
+                        <p class="card-text">Technologies Used: React & Firebase</p>
+                        <p>Date: September 2020</p>
+                        <a href="spotify-clone-67fac.web.app" class="btn">Visit Website</a>
                         </div>
                     </div>
                 </div>
