--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <p class="card-text">This is a clone of Spotify made with React and firebase. This application has the same look and feel of the real Spotify. It allows for specific user access, pulling up your personal playlists.</p>
                         <p class="card-text">Technologies Used: React & Firebase</p>
                         <p>Date: September 2020</p>
-                        <a href="spotify-clone-67fac.web.app" class="btn">Visit Website</a>
+                        <a href="https://spotify-clone-67fac.web.app/" class="btn">Visit Website</a>
                         </div>
                     </div>
                 </div>
